--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                             <div class="limit-box">
                                 <nav class="main-menu">
                                     <ul class="menu-area-main">
-                                        <li class="active"><a href="#home">Home</a></li>
-                                        <li><a href="#about">About Us</a></li>
-                                        <li><a href="#fruits">Fruits</a></li>
+                                        <li class="active"><a href="#home">Inicio</a></li>
+                                        <li><a href="#about">Nosotros</a></li>
+                                        <li><a href="#fruits">Productos</a></li>
                                         <li><a href="#blog">Blog</a></li>
-                                        <li><a href="#contact">Contact Us</a></li>
+                                        <li><a href="#contact">Contacto</a></li>
                                     </ul>
                                 </nav>
                             </div>
