--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-12">
-                            <h3>Contact Us</h3>
+                            <h3>Contact Us+</h3>
                             <p>Healing Center, 176 W Street name, New York, NY<br><br>(+91) 987 654 3210<br><br>demo@gmail.com</p>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12">
